--- a/index.html
+++ b/index.html
@@ -11,35 +11,34 @@
   </head>
   <body>
     <div id="app">
-      <div class="product-img">
-        <!-- <img v-bind:src="image" />-->
-        <img :src="image"/>
-        <!--v-bind is a directive which dynamically bind an attritube to expression, here attribute is src and expression is image-->
-      </div>
-      <div class="product-info">
-        <h1>{{product}}</h1>
-        <!-- it refers to the product of the vue-data, it ask what the value of product-->
-        <p v-show="true">On Sale</p>
-        <p v-if="productItem > 10">In Stock</p>
-        <p v-if="productItem <= 10 && productItem > 0">HUrry Up! only few lefts</p>
-        <p v-else>Out of Stock</p>
-        <!-- <p v-show>In Stock</p> Used for toggling elements visibility -->
-        <ul type = "none">
-          <li v-for = "detail in details">{{detail}}</li>
-        </ul>
-        <ul>
-          <li v-for="(size, index) in sizes" :key="index">{{ size }}</li>
-        </ul>
-        <!--give each DOM element a unique id-->
-        <div v-for="varient in varients" :key="varient.id">{{varient.color}}</div>
+      <div class="nav-bar"></div>
+      <div class="product-display">
+        <div class="product-container">
+          <div class="product-image">
+            <img v-bind:src="image" />
+          </div>
+          <div class="product-info">
+            <h1>{{ product }}</h1>
+            <p v-if="inStock">In Stock</p>
+            <p v-else>Out of Stock</p>
+            <ul>
+              <li v-for="detail in details">{{ detail }}</li>
+            </ul>
+            <ul>
+              <li v-for="(size, index) in sizes" :key="index">{{ size }}</li>
+            </ul>
+            <div v-for="variant in variants" :key="variant.id">
+              {{ variant.color }}
+            </div>
+          </div>
+        </div>
       </div>
     </div>
-    <!-- Import App vue -->
+    <!-- Import App -->
     <script src="main.js"></script>
-    <!--Mount App:- Mount the app we have created in js to our DOM-->
+    <!-- Mount App -->
     <script>
-      const mountedApp = app.mount("#app"); // it mount the vue on html tags
-      // mountedApp.product = 'shoessss'
+      const mountedApp = app.mount("#app");
     </script>
   </body>
 </html>
