--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <p v-if="inStock">In Stock</p>
             <p v-else>Out of Stock</p>
             <ul>
+              <!--here details specify what we want to loop over and detail specify alias for the element at a given time of that iteration-->
               <li v-for="detail in details">{{ detail }}</li>
             </ul>
             <ul>
