--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <body>
     <div id="app">
       <div class="nav-bar"></div>
+      <div class="cart">Cart({{cart}})</div>
       <div class="product-display">
         <div class="product-container">
           <div class="product-image">
@@ -28,9 +29,13 @@
             <ul>
               <li v-for="(size, index) in sizes" :key="index">{{ size }}</li>
             </ul>
-            <div v-for="variant in variants" :key="variant.id">
+            <div v-for="variant in variants" :key="variant.id" @mouseover = "updateImage(variants.image)">
               {{ variant.color }}
             </div>
+            <!--add event handler on click-->
+            <!-- <button class="button" v-on:click="addToCart">Add to Cart</button> -->
+            <button class="button" @click="addToCart">Add to Cart</button>
+
           </div>
         </div>
       </div>
