--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <div id="app">
       <div class="nav-bar"></div>
-      <div class="cart">Cart({{cart}})</div>
+      <div class="cart">Cart({{ cart }})</div>
       <div class="product-display">
         <div class="product-container">
           <div class="product-image">
@@ -23,19 +23,17 @@
             <p v-if="inStock">In Stock</p>
             <p v-else>Out of Stock</p>
             <ul>
-              <!--here details specify what we want to loop over and detail specify alias for the element at a given time of that iteration-->
               <li v-for="detail in details">{{ detail }}</li>
             </ul>
-            <ul>
-              <li v-for="(size, index) in sizes" :key="index">{{ size }}</li>
-            </ul>
-            <div v-for="variant in variants" :key="variant.id" @mouseover = "updateImage(variants.image)">
+
+            <div
+              v-for="variant in variants"
+              :key="variant.id"
+              @mouseover="updateImage(variant.image)"
+            >
               {{ variant.color }}
             </div>
-            <!--add event handler on click-->
-            <!-- <button class="button" v-on:click="addToCart">Add to Cart</button> -->
             <button class="button" @click="addToCart">Add to Cart</button>
-
           </div>
         </div>
       </div>
