--- a/index.html
+++ b/index.html
@@ -30,10 +30,12 @@
               v-for="variant in variants"
               :key="variant.id"
               @mouseover="updateImage(variant.image)"
-            >
-              {{ variant.color }}
+              class="color-circle" :style="{backgroundColor: variant.color}"
+              >
+              <!-- {{ variant.color }} -->
             </div>
-            <button class="button" @click="addToCart">Add to Cart</button>
+            <button class="button" :class="{disabledButton: !inStock}" :disabled="!inStock" @click="addToCart">Add to Cart</button>
+            <button class="button" @click="deleteFromCart">Delete from Cart</button>
           </div>
         </div>
       </div>
