--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
               <!-- {{ variant.color }} -->
             </div>
             <button class="button" :class="{disabledButton: !inStock}" :disabled="!inStock" @click="addToCart">Add to Cart</button>
-            <button class="button" @click="deleteFromCart">Delete from Cart</button>
+            <button class="button" :class="{disabledButton: cart == 0}" @click="deleteFromCart">Delete from Cart</button>
           </div>
         </div>
       </div>
