--- a/index.html
+++ b/index.html
@@ -13,37 +13,13 @@
     <div id="app">
       <div class="nav-bar"></div>
       <div class="cart">Cart({{ cart }})</div>
-      <div class="product-display">
-        <div class="product-container">
-          <div class="product-image">
-            <img v-bind:src="image" />
-          </div>
-          <div class="product-info">
-            <h1 v-if="onSale">{{sale}}</h1>
-            <h1 v-else>{{ title }}</h1>
-            <!--now inStock is not a data property but a computed property-->
-            <p v-if="inStock">In Stock</p> 
-            <p v-else>Out of Stock</p>
-            <ul>
-              <li v-for="detail in details">{{ detail }}</li>
-            </ul>
-
-            <div
-              v-for="(variant,index) in variants"
-              :key="variant.id"
-              @mouseover="updateVariant(index)"
-              class="color-circle" :style="{backgroundColor: variant.color}"
-              >
-              <!-- {{ variant.color }} -->
-            </div>
-            <button class="button" :class="{disabledButton: !inStock}" :disabled="!inStock" @click="addToCart">Add to Cart</button>
-            <button class="button" :class="{disabledButton: cart == 0}" @click="deleteFromCart">Delete from Cart</button>
-          </div>
-        </div>
-      </div>
+      <product-display></product-display>
     </div>
+   
     <!-- Import App -->
-    <script src="main.js"></script>
+    <script src="main.js"></script> 
+    <!--Import component-->
+    <script src="/components/ProductDisplay.js"></script>
     <!-- Mount App -->
     <script>
       const mountedApp = app.mount("#app");
