--- a/index.html
+++ b/index.html
@@ -13,13 +13,15 @@
     <div id="app">
       <div class="nav-bar"></div>
       <div class="cart">Cart({{ cart.length }})</div>
-      <product-display :premium= "premium" @add-to-cart="updateCart" @delete-to-cart="deleteCart"></product-display>
+      <product-display :premium= "premium" :cart="cart" @add-to-cart="updateCart" @delete-to-cart="deleteCart"></product-display>
       <!-- <product-detail :details="details"></product-detail> -->
     </div>
+
     <!-- Import App -->
     <script src="main.js"></script> 
     <!--Import component-->
     <script src="/components/ProductDisplay.js"></script>
+    <script src="/components/ReviewForm.js"></script>
     <!-- <script src="/components/ProductDetails.js"></script> -->
     <!-- Mount App -->
     <script>
